Added model path to the output

--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_feb67c6754ee9638a9c0b6cb444565d7 {\n",
+       "                #map_4ff7d26f356d68e2059117d0e9d42585 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -108,14 +108,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_feb67c6754ee9638a9c0b6cb444565d7&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_4ff7d26f356d68e2059117d0e9d42585&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_feb67c6754ee9638a9c0b6cb444565d7 = L.map(\n",
-       "                &quot;map_feb67c6754ee9638a9c0b6cb444565d7&quot;,\n",
+       "            var map_4ff7d26f356d68e2059117d0e9d42585 = L.map(\n",
+       "                &quot;map_4ff7d26f356d68e2059117d0e9d42585&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -129,73 +129,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_f75f015c01e4109ede9611c7740479a1 = L.tileLayer(\n",
+       "            var tile_layer_fd44dc01f73ae5358eb74395bb207235 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_f75f015c01e4109ede9611c7740479a1.addTo(map_feb67c6754ee9638a9c0b6cb444565d7);\n",
+       "            tile_layer_fd44dc01f73ae5358eb74395bb207235.addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
        "        \n",
        "    \n",
-       "            var marker_4c005e8529953a18fdbbf1061073f34c = L.marker(\n",
+       "            var marker_00a4471e8f5d62e451a186bdc507e8f0 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_feb67c6754ee9638a9c0b6cb444565d7);\n",
+       "            ).addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
        "        \n",
        "    \n",
-       "        var popup_bfd5ababe001e6a2cd2e019fd57bbfa8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_7ca3123e0ba26bdc69e361a4c9ab2e56 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_a1843dd90035a2c70075a97ab4c4c31d = $(`&lt;div id=&quot;html_a1843dd90035a2c70075a97ab4c4c31d&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_bfd5ababe001e6a2cd2e019fd57bbfa8.setContent(html_a1843dd90035a2c70075a97ab4c4c31d);\n",
+       "                var html_5d943e52632a44ad7776735563524678 = $(`&lt;div id=&quot;html_5d943e52632a44ad7776735563524678&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_7ca3123e0ba26bdc69e361a4c9ab2e56.setContent(html_5d943e52632a44ad7776735563524678);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_4c005e8529953a18fdbbf1061073f34c.bindPopup(popup_bfd5ababe001e6a2cd2e019fd57bbfa8)\n",
+       "        marker_00a4471e8f5d62e451a186bdc507e8f0.bindPopup(popup_7ca3123e0ba26bdc69e361a4c9ab2e56)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_b8c3e1d25d627809e95d2b2a0e7c39b1 = L.marker(\n",
+       "            var marker_0db23f13b8dc1d9751c0efc6da21708f = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_feb67c6754ee9638a9c0b6cb444565d7);\n",
+       "            ).addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
        "        \n",
        "    \n",
-       "        var popup_158323a6789a676ea8f0725e872a028e = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_7b01b85e797fc361943415d769335890 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_4fd356707c2f0ef15a6f4399bd25fe7e = $(`&lt;div id=&quot;html_4fd356707c2f0ef15a6f4399bd25fe7e&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_158323a6789a676ea8f0725e872a028e.setContent(html_4fd356707c2f0ef15a6f4399bd25fe7e);\n",
+       "                var html_7973ed4d893bb95873bd0b415506f6ba = $(`&lt;div id=&quot;html_7973ed4d893bb95873bd0b415506f6ba&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_7b01b85e797fc361943415d769335890.setContent(html_7973ed4d893bb95873bd0b415506f6ba);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_b8c3e1d25d627809e95d2b2a0e7c39b1.bindPopup(popup_158323a6789a676ea8f0725e872a028e)\n",
+       "        marker_0db23f13b8dc1d9751c0efc6da21708f.bindPopup(popup_7b01b85e797fc361943415d769335890)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_f1e61e4c5b7ab3dc4ea5078f8b165cf1 = L.marker(\n",
+       "            var marker_a25ba16ab42ac1741159cb053e7cb019 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_feb67c6754ee9638a9c0b6cb444565d7);\n",
+       "            ).addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
        "        \n",
        "    \n",
-       "        var popup_c793fe56ca99e0f5993f2daa0b8e7b0e = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_38c2176a5d31fb53b469934dfc5b7a2b = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_00440400ef13ca3c9ffb0ec1e1a6a37c = $(`&lt;div id=&quot;html_00440400ef13ca3c9ffb0ec1e1a6a37c&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_c793fe56ca99e0f5993f2daa0b8e7b0e.setContent(html_00440400ef13ca3c9ffb0ec1e1a6a37c);\n",
+       "                var html_619095c77cd4f9ee494e3e1fd540dc1f = $(`&lt;div id=&quot;html_619095c77cd4f9ee494e3e1fd540dc1f&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_38c2176a5d31fb53b469934dfc5b7a2b.setContent(html_619095c77cd4f9ee494e3e1fd540dc1f);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_f1e61e4c5b7ab3dc4ea5078f8b165cf1.bindPopup(popup_c793fe56ca99e0f5993f2daa0b8e7b0e)\n",
+       "        marker_a25ba16ab42ac1741159cb053e7cb019.bindPopup(popup_38c2176a5d31fb53b469934dfc5b7a2b)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -204,10 +204,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1c79da77f50>"
+       "<folium.folium.Map at 0x1d30ea8e6d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
      "text": [
       "Latitude: 47.63404846191406 Longitude: 8.694016456604004\n",
       "Found 6 KML files ['swissBUILDINGS3D 2.0\\\\1031-44\\\\1031-44.kml', 'swissBUILDINGS3D 2.0\\\\1032-33\\\\1032-33.kml', 'swissBUILDINGS3D 2.0\\\\1032-34\\\\1032-34.kml', 'swissBUILDINGS3D 2.0\\\\1051-22\\\\1051-22.kml', 'swissBUILDINGS3D 2.0\\\\1052-11\\\\1052-11.kml', 'swissBUILDINGS3D 2.0\\\\1052-12\\\\1052-12.kml']\n",
-      "KML File: swissBUILDINGS3D 2.0\\1052-11\\1052-11.kml, Latitude: 47.634047498746725, Longitude: 8.694078211780825\n"
+      "KML File: swissBUILDINGS3D 2.0\\1052-11\\1052-11.kml, Latitude: 47.634047498746725, Longitude: 8.694078211780825, href: models/model_2045.dae\n"
      ]
     }
    ],
@@ -326,6 +326,7 @@
     "        # Extract the latitude and longitude values from the KML content\n",
     "        latitudes = re.findall(r'<latitude>(.*?)</latitude>', kml_content)\n",
     "        longitudes = re.findall(r'<longitude>(.*?)</longitude>', kml_content)\n",
+    "        hrefs = re.findall(r'<href>(.*?)</href>', kml_content)\n",
     "        \n",
     "        # Convert the latitude and longitude values to float\n",
     "        latitudes = [float(lat) for lat in latitudes]\n",
@@ -335,11 +336,11 @@
     "        for i in range(len(latitudes)):\n",
     "            distance = calculate_distance(lat, lon, latitudes[i], longitudes[i])\n",
     "            if distance <= tolerance:\n",
-    "                filtered_kml_data.append((kml_file, latitudes[i], longitudes[i]))\n",
+    "                filtered_kml_data.append((kml_file, latitudes[i], longitudes[i],  hrefs[i]))\n",
     "\n",
     "# Print the filtered KML data\n",
     "for data in filtered_kml_data:\n",
-    "    print(f\"KML File: {data[0]}, Latitude: {data[1]}, Longitude: {data[2]}\")\n",
+    "    print(f\"KML File: {data[0]}, Latitude: {data[1]}, Longitude: {data[2]}, href: {data[3]}\")\n",
     "\n"
    ]
   }
