--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'results': [{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7555, 'weight': 1}, {'attrs': {'detail': 'widmergasse 19.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210226908_0', 'geom_quadindex': '012232210032122310321', 'geom_st_box2d': 'BOX(694360.3364026649 276691.3415635696,694360.3364026649 276691.3415635696)', 'label': 'Widmergasse 19.1 <b>8466 Trüllikon</b>', 'lat': 47.634090423583984, 'lon': 8.694190979003906, 'num': 191, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276691.34375, 'y': 694360.3125, 'zoomlevel': 10}, 'id': 2195186, 'weight': 7}, {'attrs': {'detail': 'widmergasse 19.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210226972_0', 'geom_quadindex': '012232210032301021330', 'geom_st_box2d': 'BOX(694372.001495032 276669.4795108603,694372.001495032 276669.4795108603)', 'label': 'Widmergasse 19.2 <b>8466 Trüllikon</b>', 'lat': 47.63389205932617, 'lon': 8.694341659545898, 'num': 192, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276669.46875, 'y': 694372.0, 'zoomlevel': 10}, 'id': 2186246, 'weight': 7}]}\n"
+      "{'results': [{'attrs': {'detail': 'schlossgasse 10 8466 truellikon 40 truellikon ch zh', 'featureId': '2258532_0', 'geom_quadindex': '012232210012232023121', 'geom_st_box2d': 'BOX(694283.6260471889 277048.37627719354,694283.6260471889 277048.37627719354)', 'label': 'Schlossgasse 10 <b>8466 Trüllikon</b>', 'lat': 47.63731002807617, 'lon': 8.693245887756348, 'num': 10, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 277048.375, 'y': 694283.625, 'zoomlevel': 10}, 'id': 1023913, 'weight': 1}, {'attrs': {'detail': 'schlossgasse 10.1 8466 truellikon 40 truellikon ch zh', 'featureId': '210227233_0', 'geom_quadindex': '012232210012223332123', 'geom_st_box2d': 'BOX(694272.6209356401 277033.48909112054,694272.6209356401 277033.48909112054)', 'label': 'Schlossgasse 10.1 <b>8466 Trüllikon</b>', 'lat': 47.637176513671875, 'lon': 8.693096160888672, 'num': 101, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 277033.5, 'y': 694272.625, 'zoomlevel': 10}, 'id': 2160671, 'weight': 7}, {'attrs': {'detail': 'schlossgasse 10.2 8466 truellikon 40 truellikon ch zh', 'featureId': '210227180_0', 'geom_quadindex': '012232210030010001321', 'geom_st_box2d': 'BOX(694283.665026845 277028.4661485711,694283.665026845 277028.4661485711)', 'label': 'Schlossgasse 10.2 <b>8466 Trüllikon</b>', 'lat': 47.63713073730469, 'lon': 8.693242073059082, 'num': 102, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 277028.46875, 'y': 694283.6875, 'zoomlevel': 10}, 'id': 2165085, 'weight': 7}]}\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_4ff7d26f356d68e2059117d0e9d42585 {\n",
+       "                #map_660cd71d1bb2648236cc8de4aed4fae5 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -108,16 +108,16 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_4ff7d26f356d68e2059117d0e9d42585&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_660cd71d1bb2648236cc8de4aed4fae5&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_4ff7d26f356d68e2059117d0e9d42585 = L.map(\n",
-       "                &quot;map_4ff7d26f356d68e2059117d0e9d42585&quot;,\n",
+       "            var map_660cd71d1bb2648236cc8de4aed4fae5 = L.map(\n",
+       "                &quot;map_660cd71d1bb2648236cc8de4aed4fae5&quot;,\n",
        "                {\n",
-       "                    center: [47.63404846191406, 8.694016456604004],\n",
+       "                    center: [47.63731002807617, 8.693245887756348],\n",
        "                    crs: L.CRS.EPSG3857,\n",
        "                    zoom: 20,\n",
        "                    zoomControl: true,\n",
@@ -129,73 +129,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_fd44dc01f73ae5358eb74395bb207235 = L.tileLayer(\n",
+       "            var tile_layer_ad65266db4b12da1875f7ab2850370d4 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_fd44dc01f73ae5358eb74395bb207235.addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
+       "            tile_layer_ad65266db4b12da1875f7ab2850370d4.addTo(map_660cd71d1bb2648236cc8de4aed4fae5);\n",
        "        \n",
        "    \n",
-       "            var marker_00a4471e8f5d62e451a186bdc507e8f0 = L.marker(\n",
-       "                [47.63404846191406, 8.694016456604004],\n",
+       "            var marker_86ea8eb03657f731394d1882279f25d7 = L.marker(\n",
+       "                [47.63731002807617, 8.693245887756348],\n",
        "                {}\n",
-       "            ).addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
+       "            ).addTo(map_660cd71d1bb2648236cc8de4aed4fae5);\n",
        "        \n",
        "    \n",
-       "        var popup_7ca3123e0ba26bdc69e361a4c9ab2e56 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_f813d11786458610a2ee80f559a3bba3 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_5d943e52632a44ad7776735563524678 = $(`&lt;div id=&quot;html_5d943e52632a44ad7776735563524678&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_7ca3123e0ba26bdc69e361a4c9ab2e56.setContent(html_5d943e52632a44ad7776735563524678);\n",
+       "                var html_8d2fdee27e1758602be6b93f5bf603e3 = $(`&lt;div id=&quot;html_8d2fdee27e1758602be6b93f5bf603e3&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_f813d11786458610a2ee80f559a3bba3.setContent(html_8d2fdee27e1758602be6b93f5bf603e3);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_00a4471e8f5d62e451a186bdc507e8f0.bindPopup(popup_7ca3123e0ba26bdc69e361a4c9ab2e56)\n",
+       "        marker_86ea8eb03657f731394d1882279f25d7.bindPopup(popup_f813d11786458610a2ee80f559a3bba3)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_0db23f13b8dc1d9751c0efc6da21708f = L.marker(\n",
-       "                [47.634090423583984, 8.694190979003906],\n",
+       "            var marker_1647278e9f80116bbb6fb4f5173ea72b = L.marker(\n",
+       "                [47.637176513671875, 8.693096160888672],\n",
        "                {}\n",
-       "            ).addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
+       "            ).addTo(map_660cd71d1bb2648236cc8de4aed4fae5);\n",
        "        \n",
        "    \n",
-       "        var popup_7b01b85e797fc361943415d769335890 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_8d46d62c5b4253a6dfe8539dc684f40e = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_7973ed4d893bb95873bd0b415506f6ba = $(`&lt;div id=&quot;html_7973ed4d893bb95873bd0b415506f6ba&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_7b01b85e797fc361943415d769335890.setContent(html_7973ed4d893bb95873bd0b415506f6ba);\n",
+       "                var html_ac3de07d102b8b02cbf9d0e024438e53 = $(`&lt;div id=&quot;html_ac3de07d102b8b02cbf9d0e024438e53&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_8d46d62c5b4253a6dfe8539dc684f40e.setContent(html_ac3de07d102b8b02cbf9d0e024438e53);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_0db23f13b8dc1d9751c0efc6da21708f.bindPopup(popup_7b01b85e797fc361943415d769335890)\n",
+       "        marker_1647278e9f80116bbb6fb4f5173ea72b.bindPopup(popup_8d46d62c5b4253a6dfe8539dc684f40e)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_a25ba16ab42ac1741159cb053e7cb019 = L.marker(\n",
-       "                [47.63389205932617, 8.694341659545898],\n",
+       "            var marker_066e7cc81aa45274d8c3f868a99b5e29 = L.marker(\n",
+       "                [47.63713073730469, 8.693242073059082],\n",
        "                {}\n",
-       "            ).addTo(map_4ff7d26f356d68e2059117d0e9d42585);\n",
+       "            ).addTo(map_660cd71d1bb2648236cc8de4aed4fae5);\n",
        "        \n",
        "    \n",
-       "        var popup_38c2176a5d31fb53b469934dfc5b7a2b = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_138dd40745333404481afb4c438de0b7 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_619095c77cd4f9ee494e3e1fd540dc1f = $(`&lt;div id=&quot;html_619095c77cd4f9ee494e3e1fd540dc1f&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_38c2176a5d31fb53b469934dfc5b7a2b.setContent(html_619095c77cd4f9ee494e3e1fd540dc1f);\n",
+       "                var html_ed558c47a7123395b260bd7e6842d9e6 = $(`&lt;div id=&quot;html_ed558c47a7123395b260bd7e6842d9e6&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_138dd40745333404481afb4c438de0b7.setContent(html_ed558c47a7123395b260bd7e6842d9e6);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_a25ba16ab42ac1741159cb053e7cb019.bindPopup(popup_38c2176a5d31fb53b469934dfc5b7a2b)\n",
+       "        marker_066e7cc81aa45274d8c3f868a99b5e29.bindPopup(popup_138dd40745333404481afb4c438de0b7)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -204,10 +204,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1d30ea8e6d0>"
+       "<folium.folium.Map at 0x1a2e9057c50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attrs': {'detail': 'widmergasse 19 8466 truellikon 40 truellikon ch zh', 'featureId': '12870_0', 'geom_quadindex': '012232210032122231000', 'geom_st_box2d': 'BOX(694347.29027415 276686.7814323578,694347.29027415 276686.7814323578)', 'label': 'Widmergasse 19 <b>8466 Trüllikon</b>', 'lat': 47.63404846191406, 'lon': 8.694016456604004, 'num': 19, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 276686.78125, 'y': 694347.3125, 'zoomlevel': 10}, 'id': 7555, 'weight': 1}\n"
+      "{'attrs': {'detail': 'schlossgasse 10 8466 truellikon 40 truellikon ch zh', 'featureId': '2258532_0', 'geom_quadindex': '012232210012232023121', 'geom_st_box2d': 'BOX(694283.6260471889 277048.37627719354,694283.6260471889 277048.37627719354)', 'label': 'Schlossgasse 10 <b>8466 Trüllikon</b>', 'lat': 47.63731002807617, 'lon': 8.693245887756348, 'num': 10, 'objectclass': '', 'origin': 'address', 'rank': 7, 'x': 277048.375, 'y': 694283.625, 'zoomlevel': 10}, 'id': 1023913, 'weight': 1}\n"
      ]
     }
    ],
@@ -260,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Latitude: 47.63404846191406 Longitude: 8.694016456604004\n",
+      "Latitude: 47.63731002807617 Longitude: 8.693245887756348\n",
       "Found 6 KML files ['swissBUILDINGS3D 2.0\\\\1031-44\\\\1031-44.kml', 'swissBUILDINGS3D 2.0\\\\1032-33\\\\1032-33.kml', 'swissBUILDINGS3D 2.0\\\\1032-34\\\\1032-34.kml', 'swissBUILDINGS3D 2.0\\\\1051-22\\\\1051-22.kml', 'swissBUILDINGS3D 2.0\\\\1052-11\\\\1052-11.kml', 'swissBUILDINGS3D 2.0\\\\1052-12\\\\1052-12.kml']\n",
-      "KML File: swissBUILDINGS3D 2.0\\1052-11\\1052-11.kml, Latitude: 47.634047498746725, Longitude: 8.694078211780825, href: models/model_2045.dae\n"
+      "KML File: swissBUILDINGS3D 2.0\\1052-11\\1052-11.kml, Latitude: 47.63725579935967, Longitude: 8.693209980398464, href: models/model_2127.dae\n"
      ]
     }
    ],
