--- a/getModelFromAddress.ipynb
+++ b/getModelFromAddress.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_dad4ca6cf7d47ec0b9b44430a600c21a {\n",
+       "                #map_9338cc5010a7f0c3eda85de81ca3d8c9 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -108,14 +108,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_dad4ca6cf7d47ec0b9b44430a600c21a&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_9338cc5010a7f0c3eda85de81ca3d8c9&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_dad4ca6cf7d47ec0b9b44430a600c21a = L.map(\n",
-       "                &quot;map_dad4ca6cf7d47ec0b9b44430a600c21a&quot;,\n",
+       "            var map_9338cc5010a7f0c3eda85de81ca3d8c9 = L.map(\n",
+       "                &quot;map_9338cc5010a7f0c3eda85de81ca3d8c9&quot;,\n",
        "                {\n",
        "                    center: [47.63404846191406, 8.694016456604004],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -129,73 +129,73 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_44aa3b9d1306b3ecccc4463db467a50b = L.tileLayer(\n",
+       "            var tile_layer_7fe0d5cd4f11cfa87a5f46fdcc6a53f1 = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_44aa3b9d1306b3ecccc4463db467a50b.addTo(map_dad4ca6cf7d47ec0b9b44430a600c21a);\n",
+       "            tile_layer_7fe0d5cd4f11cfa87a5f46fdcc6a53f1.addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
        "        \n",
        "    \n",
-       "            var marker_fb0f80a0dfe3cc5a76a8f356b77feb07 = L.marker(\n",
+       "            var marker_12ee40dd52a1e922ab21664f12f98529 = L.marker(\n",
        "                [47.63404846191406, 8.694016456604004],\n",
        "                {}\n",
-       "            ).addTo(map_dad4ca6cf7d47ec0b9b44430a600c21a);\n",
+       "            ).addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
        "        \n",
        "    \n",
-       "        var popup_220b333bdf3703d5afbc0468ec0d78bc = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_ead37a2d4e9775b868202a3813a7ca34 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_70e0732656be8224bca822bed365af80 = $(`&lt;div id=&quot;html_70e0732656be8224bca822bed365af80&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
-       "                popup_220b333bdf3703d5afbc0468ec0d78bc.setContent(html_70e0732656be8224bca822bed365af80);\n",
+       "                var html_a99aef67a5596bab14462c5587576053 = $(`&lt;div id=&quot;html_a99aef67a5596bab14462c5587576053&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 0&lt;/div&gt;`)[0];\n",
+       "                popup_ead37a2d4e9775b868202a3813a7ca34.setContent(html_a99aef67a5596bab14462c5587576053);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_fb0f80a0dfe3cc5a76a8f356b77feb07.bindPopup(popup_220b333bdf3703d5afbc0468ec0d78bc)\n",
+       "        marker_12ee40dd52a1e922ab21664f12f98529.bindPopup(popup_ead37a2d4e9775b868202a3813a7ca34)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_6180116e01785c8cfa1e83f21c3f70b4 = L.marker(\n",
+       "            var marker_94e66050864bf895f7a0cef3aa2f9838 = L.marker(\n",
        "                [47.634090423583984, 8.694190979003906],\n",
        "                {}\n",
-       "            ).addTo(map_dad4ca6cf7d47ec0b9b44430a600c21a);\n",
+       "            ).addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
        "        \n",
        "    \n",
-       "        var popup_1489656f3037031b03cae600fba1914c = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_1a1ed9f4780f17ec083bbc8f3bf13662 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_1b867d9a781815677a7a7392ec9eac93 = $(`&lt;div id=&quot;html_1b867d9a781815677a7a7392ec9eac93&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
-       "                popup_1489656f3037031b03cae600fba1914c.setContent(html_1b867d9a781815677a7a7392ec9eac93);\n",
+       "                var html_56b271d825507d6511192830bacfb6c3 = $(`&lt;div id=&quot;html_56b271d825507d6511192830bacfb6c3&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 1&lt;/div&gt;`)[0];\n",
+       "                popup_1a1ed9f4780f17ec083bbc8f3bf13662.setContent(html_56b271d825507d6511192830bacfb6c3);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_6180116e01785c8cfa1e83f21c3f70b4.bindPopup(popup_1489656f3037031b03cae600fba1914c)\n",
+       "        marker_94e66050864bf895f7a0cef3aa2f9838.bindPopup(popup_1a1ed9f4780f17ec083bbc8f3bf13662)\n",
        "        ;\n",
        "\n",
        "        \n",
        "    \n",
        "    \n",
-       "            var marker_7822c29a6eeb66652d0712d78e4a48e6 = L.marker(\n",
+       "            var marker_2e3b64a3c32d795affb0e919a7484702 = L.marker(\n",
        "                [47.63389205932617, 8.694341659545898],\n",
        "                {}\n",
-       "            ).addTo(map_dad4ca6cf7d47ec0b9b44430a600c21a);\n",
+       "            ).addTo(map_9338cc5010a7f0c3eda85de81ca3d8c9);\n",
        "        \n",
        "    \n",
-       "        var popup_245d442dce3f1444d51bc1b319be6bf8 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "        var popup_e407b885b41f7f7ff61cf747cd923b83 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
        "\n",
        "        \n",
        "            \n",
-       "                var html_b446c1c4f93d898ccd8aca09fac35fd5 = $(`&lt;div id=&quot;html_b446c1c4f93d898ccd8aca09fac35fd5&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
-       "                popup_245d442dce3f1444d51bc1b319be6bf8.setContent(html_b446c1c4f93d898ccd8aca09fac35fd5);\n",
+       "                var html_0f980a44f27b15d9c0b7b6e158baa470 = $(`&lt;div id=&quot;html_0f980a44f27b15d9c0b7b6e158baa470&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Index: 2&lt;/div&gt;`)[0];\n",
+       "                popup_e407b885b41f7f7ff61cf747cd923b83.setContent(html_0f980a44f27b15d9c0b7b6e158baa470);\n",
        "            \n",
        "        \n",
        "\n",
-       "        marker_7822c29a6eeb66652d0712d78e4a48e6.bindPopup(popup_245d442dce3f1444d51bc1b319be6bf8)\n",
+       "        marker_2e3b64a3c32d795affb0e919a7484702.bindPopup(popup_e407b885b41f7f7ff61cf747cd923b83)\n",
        "        ;\n",
        "\n",
        "        \n",
@@ -204,10 +204,10 @@
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x18dfd5046d0>"
+       "<folium.folium.Map at 0x15c31b7b950>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -399,20 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from ipygany import PolyMesh\n",
@@ -452,13 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea2f1877493346bc9596db61c8b2a0ee",
+       "model_id": "ebabed1c76c6474ead9a1eafab88a691",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,7 +455,7 @@
        "Scene(children=[PolyMesh(data=[], triangle_indices=array([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  1…"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,6 +466,13 @@
     "#Draws the geometry\n",
     "scene = Scene([meshes[3]])\n",
     "scene"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Upload images from the building"
    ]
   }
  ],
